# suprachat-backend

./: .gitignore  README.md  pyproject.toml
suprachat_backend/: __init__.py  db.py
suprachat_backend/blueprints/: files.py  user.py
suprachat_backend/controllers/: files.py  user.py
suprachat_backend/models/: user.py
suprachat_backend/utils/: auth.py  buntdb_to_mongodb.py  files.py  irc.py  passwd.py  validate_string.py
suprachat_backend/views/: files.py  user.py
tests/: test_suprachat_backend.py
tests/utils/: init_ergo.py
